Fix `pricing box` layout bug

--- a/assets/style.css
+++ b/assets/style.css
@@ -403,7 +403,7 @@ header * {
     position: absolute;
     top: 10px;
     right: 30px;
-    font-size: 4em;
+    font-size: 3.3em;
     color: rgba(0, 0, 0, 0.08);
     transition: 0.5s;
     pointer-events: none;
@@ -414,16 +414,18 @@ header * {
 }
 
 .pricing_panel .panel .box .content h3 {
-    font-size: 5.8em;
+    font-size: 5.5em;
     color: #777;
     z-index: 1;
+    margin: 55px 0 0;
     transition: 0.5s;
 }
 
 .pricing_panel .panel .box .content h3 s {
     position: absolute;
-    top: 80px;
-    font-size: .8em;
+    top: 20%;
+    left: 20px;
+    font-size: .7em;
     color: #939393;
 }
 
